--- a/02.bases/package.json
+++ b/02.bases/package.json
@@ -11,6 +11,7 @@
   "author": "Fernando Sayago",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "get-age": "^1.0.1",
     "uuid": "^10.0.0"
   }
