--- a/02.bases/package.json
+++ b/02.bases/package.json
@@ -4,7 +4,9 @@
   "description": "aplicacion de node",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "dev": "nodemon",
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
@@ -18,10 +20,14 @@
     "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.0.2",
     "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
